# mem

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  quick_demo.py  quick_start_gemini.py  setup_guide.py
examples/: gemini_config_example.py  medical_bone_age_example.py
src/langmem/: __init__.py
src/langmem/medical/: __init__.py  image_encoder.py  image_encoder_local.py  learning.py  manager.py  retrieval.py  schemas.py
src/langmem/medical/bone_age/: __init__.py  classifier.py  knowledge.py
tests/medical/: test_medical_schemas.py
